--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@ajv-validator/config": "^0.1.0",
     "ajv-async": "^1.0.0",
+    "ajv-formats": "^0.1.0",
     "bluebird": "^3.5.3",
     "brfs": "^2.0.0",
     "browserify": "^16.2.0",
