--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,6 @@
 extends: eslint:recommended
+parserOptions:
+  ecmaVersion: 6
 env:
   node: true
   browser: true
@@ -9,20 +11,19 @@ rules:
   curly: [2, multi-or-nest, consistent]
   dot-location: [2, property]
   dot-notation: 2
-  indent-legacy: [2, 2, SwitchCase: 1]
   linebreak-style: [2, unix]
   new-cap: 2
   no-console: [2, allow: [warn, error]]
   no-else-return: 2
   no-eq-null: 2
+  no-extra-semi: 0
   no-fallthrough: 2
   no-invalid-this: 2
   no-return-assign: 2
   no-shadow: 1
   no-trailing-spaces: 2
   no-use-before-define: [2, nofunc]
-  quotes: [2, single, avoid-escape]
-  semi: [2, always]
+  semi: 0
   strict: [2, global]
   valid-jsdoc: [2, requireReturn: false]
   no-control-regex: 0
