Revert "use dot v2"
This reverts commit 078ffa781c7798295d8ec9e0773d520d67a4b8c6.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "chai": "^4.0.1",
     "coveralls": "^3.0.1",
     "del-cli": "^3.0.0",
-    "dot": "^2.0.0-beta",
+    "dot": "^1.0.3",
     "eslint": "^7.3.1",
     "gh-pages-generator": "^0.2.3",
     "glob": "^7.0.0",
