--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "del-cli": "^3.0.0",
     "dot": "^1.0.3",
     "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
     "gh-pages-generator": "^0.2.3",
     "glob": "^7.0.0",
     "husky": "^4.2.5",
