--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ".tonic_example.js"
   ],
   "scripts": {
-    "eslint": "eslint lib/{compile/,}*.js spec/{**/,}*.js scripts --ignore-pattern spec/JSON-Schema-Test-Suite",
+    "eslint": "eslint lib/{compile/,}*.{js,ts} spec/{**/,}*.js scripts --ignore-pattern spec/JSON-Schema-Test-Suite",
     "lint": "npm run eslint",
     "prettier:write": "prettier --write './**/*.{md,json,yaml,js,ts}'",
     "prettier:check": "prettier --list-different './**/*.{md,json,yaml,js,ts}'",
@@ -73,6 +73,8 @@
   "devDependencies": {
     "@ajv-validator/config": "^0.1.0",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "ajv-async": "^1.0.0",
     "ajv-formats": "^0.1.0",
     "bluebird": "^3.5.3",
