refactor: keyword and util to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "types": ["node"],
     "noImplicitAny": false,
     "noImplicitThis": false,
+    "noImplicitReturns": false,
     "allowJs": true,
     "declaration": false
   }
