--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,9 +20,16 @@ overrides:
       project: ["./tsconfig.json"]
     plugins: ["@typescript-eslint"]
     rules:
+      no-var: 0
       "@typescript-eslint/ban-types": off
       "@typescript-eslint/no-empty-interface": off
       "@typescript-eslint/no-explicit-any": off
+      "@typescript-eslint/no-unsafe-call": off
+      "@typescript-eslint/no-unsafe-member-access": off
+      "@typescript-eslint/no-unsafe-assignment": off
+      "@typescript-eslint/restrict-plus-operands": off
+      "@typescript-eslint/no-unsafe-return": off
+      "@typescript-eslint/no-var-requires": off
 rules:
   block-scoped-var: error
   callback-return: error
