refactor: pattern keyword to typescript

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,6 +21,8 @@ overrides:
     plugins: ["@typescript-eslint"]
     rules:
       no-var: 0
+      "@typescript-eslint/restrict-template-expressions":
+        [error, allowBoolean: true]
       "@typescript-eslint/ban-types": off
       "@typescript-eslint/no-empty-interface": off
       "@typescript-eslint/no-explicit-any": off
