--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bundle": "del-cli dist && node ./scripts/bundle.js . Ajv pure_getters",
     "bundle-beautify": "node ./scripts/bundle.js js-beautify",
     "dot": "del-cli lib/dotjs/*.js \"!lib/dotjs/index.js\" && node scripts/compile-dots.js",
-    "tsc": "tsc || true && cp -r lib/refs dist/refs",
+    "tsc": "tsc && cp -r lib/refs dist/refs",
     "build": "npm run dot && npm run tsc",
     "test-karma": "karma start",
     "test-browser": "del-cli .browser && npm run bundle && scripts/prepare-tests && npm run test-karma",
