refactor: validate, coerce to typescript (WIP)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noImplicitThis": false,
     "noImplicitReturns": false,
     "allowJs": true,
-    "declaration": false
+    "declaration": false,
+    "target": "ES2018"
   }
 }
