--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,6 +32,9 @@ overrides:
       "@typescript-eslint/restrict-plus-operands": off
       "@typescript-eslint/no-unsafe-return": off
       "@typescript-eslint/no-var-requires": off
+      "@typescript-eslint/no-empty-function": off
+      "@typescript-eslint/no-this-alias": off
+      "@typescript-eslint/no-implied-eval": off
 rules:
   block-scoped-var: error
   callback-return: error
