feat: keyword error definition: params is optional, message can be a string

--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
   "prettier": "@ajv-validator/config/prettierrc.json",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm test"
     }
   },
   "lint-staged": {
