refactor, fix eslint rules

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,8 +21,7 @@ overrides:
     plugins: ["@typescript-eslint"]
     rules:
       no-var: 0
-      "@typescript-eslint/restrict-template-expressions":
-        [error, allowBoolean: true]
+      "@typescript-eslint/restrict-template-expressions": [error, allowBoolean: true]
       "@typescript-eslint/ban-types": off
       "@typescript-eslint/no-empty-interface": off
       "@typescript-eslint/no-explicit-any": off
@@ -38,7 +37,7 @@ overrides:
 rules:
   block-scoped-var: error
   callback-return: error
-  complexity: [error, 16]
+  complexity: [error, 17]
   curly: [error, multi-line, consistent]
   dot-location: [error, property]
   dot-notation: error
