--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,7 +21,7 @@ overrides:
     plugins: ["@typescript-eslint"]
     rules:
       no-var: 0
-      "@typescript-eslint/restrict-template-expressions": [error, allowBoolean: true]
+      "@typescript-eslint/restrict-template-expressions": off
       "@typescript-eslint/ban-types": off
       "@typescript-eslint/no-empty-interface": off
       "@typescript-eslint/no-explicit-any": off
