browser bundle script (6 tests fail in browser), do not browserify code in schema tests

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ node_modules
 # Browserified tests
 .browser
 
-# bundles
+# compiled typescript
 dist/
+
+# browser bundles
+bundle/
 
 package-lock.json
