--- a/package.json
+++ b/package.json
@@ -13,21 +13,18 @@
   ],
   "scripts": {
     "eslint": "eslint lib/{**/,}*.ts spec/{**/,}*.js scripts --ignore-pattern spec/JSON-Schema-Test-Suite",
-    "lint": "npm run eslint",
     "prettier:write": "prettier --write './**/*.{md,json,yaml,js,ts}'",
     "prettier:check": "prettier --list-different './**/*.{md,json,yaml,js,ts}'",
     "test-spec": "mocha spec/{**/,}*.spec.js -R dot",
     "test-fast": "AJV_FAST_TEST=true npm run test-spec",
     "test-debug": "npm run test-spec -- --inspect-brk",
     "test-cov": "nyc npm run test-spec",
-    "test-ts": "tsc --target ES5 --noImplicitAny --noEmit spec/typescript/index.ts",
-    "bundle": "del-cli dist && node ./scripts/bundle.js . Ajv pure_getters",
-    "bundle-beautify": "node ./scripts/bundle.js js-beautify",
-    "build": "del-cli dist && tsc && cp -r lib/refs dist/refs",
+    "bundle": "rm -rf bundle && node ./scripts/bundle.js",
+    "build": "rm -rf dist && tsc && cp -r lib/refs dist/refs",
     "test-karma": "karma start",
-    "test-browser": "del-cli .browser && npm run bundle && scripts/prepare-tests && npm run test-karma",
+    "test-browser": "rm -rf .browser && npm run bundle && scripts/prepare-tests && npm run test-karma",
     "test-all": "npm run test-cov && if-node-version 12 npm run test-browser",
-    "test": "npm run lint && npm run build && npm run test-cov",
+    "test": "npm run eslint && npm run build && npm run test-cov",
     "prepublish": "npm run build",
     "watch": "watch \"npm run build\" ./lib"
   },
@@ -80,7 +77,6 @@
     "browserify": "^16.2.0",
     "chai": "^4.0.1",
     "coveralls": "^3.0.1",
-    "del-cli": "^3.0.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "gh-pages-generator": "^0.2.3",
@@ -92,14 +88,13 @@
     "karma": "^5.0.0",
     "karma-chrome-launcher": "^3.0.0",
     "karma-mocha": "^2.0.0",
-    "karma-sauce-launcher": "^4.1.3",
     "lint-staged": "^10.2.11",
     "mocha": "^8.0.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
     "require-globify": "^1.3.0",
+    "terser": "^5.2.1",
     "typescript": "^4.0.0",
-    "uglify-js": "^3.6.9",
     "watch": "^1.0.0"
   },
   "collective": {
