--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -34,6 +34,7 @@ overrides:
       "@typescript-eslint/no-empty-function": off
       "@typescript-eslint/no-this-alias": off
       "@typescript-eslint/no-implied-eval": off
+      "@typescript-eslint/no-floating-promises": off
       no-invalid-this: off
 rules:
   block-scoped-var: error
