tests: ts tests, replace require-globify and brfs with jsontests script, remove vars from tests

--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     ".tonic_example.js"
   ],
   "scripts": {
-    "eslint": "eslint lib/{**/,}*.ts spec/{**/,}*.js scripts --ignore-pattern spec/JSON-Schema-Test-Suite",
+    "eslint": "eslint lib/{**/,}*.{ts,js} spec/{**/,}*.{ts,js} scripts --ignore-pattern spec/JSON-Schema-Test-Suite",
     "prettier:write": "prettier --write './**/*.{md,json,yaml,js,ts}'",
     "prettier:check": "prettier --list-different './**/*.{md,json,yaml,js,ts}'",
-    "test-spec": "mocha spec/{**/,}*.spec.js -R dot",
-    "test-fast": "AJV_FAST_TEST=true npm run test-spec",
+    "test-spec": "cross-env TS_NODE_PROJECT=spec/tsconfig.json mocha -r ts-node/register spec/{**/,}*.spec.{js,ts} -R dot",
+    "test-fast": "cross-env AJV_FAST_TEST=true npm run test-spec",
     "test-debug": "npm run test-spec -- --inspect-brk",
     "test-cov": "nyc npm run test-spec",
     "bundle": "rm -rf bundle && node ./scripts/bundle.js",
     "build": "rm -rf dist && tsc && cp -r lib/refs dist/refs",
+    "json-tests": "node scripts/jsontests",
     "test-karma": "karma start",
-    "test-browser": "rm -rf .browser && npm run bundle && scripts/prepare-tests && npm run test-karma",
+    "test-browser": "rm -rf .browser && npm run bundle && scripts/prepare-tests && karma start",
     "test-all": "npm run test-cov && if-node-version 12 npm run test-browser",
-    "test": "npm run eslint && npm run build && npm run test-cov",
+    "test": "npm run eslint && npm run build && npm run json-tests && npm run test-cov",
     "prepublish": "npm run build",
     "watch": "watch \"npm run build\" ./lib"
   },
@@ -67,15 +68,16 @@
   },
   "devDependencies": {
     "@ajv-validator/config": "^0.1.1",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "ajv-formats": "^0.1.0",
-    "bluebird": "^3.5.3",
-    "brfs": "^2.0.0",
     "browserify": "^16.2.0",
     "chai": "^4.0.1",
     "coveralls": "^3.0.1",
+    "cross-env": "^7.0.2",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "gh-pages-generator": "^0.2.3",
@@ -91,8 +93,9 @@
     "mocha": "^8.0.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
-    "require-globify": "^1.3.0",
     "terser": "^5.2.1",
+    "ts-node": "^9.0.0",
+    "tsify": "^5.0.2",
     "typescript": "^4.0.0",
     "watch": "^1.0.0"
   },
