--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "test-cov": "nyc npm run test-spec",
     "bundle": "rm -rf bundle && node ./scripts/bundle.js",
     "build": "rm -rf dist && tsc && cp -r lib/refs dist/refs",
-    "json-tests": "node scripts/jsontests",
+    "json-tests": "rm -rf spec/_json/*.js && node scripts/jsontests",
     "test-karma": "karma start",
     "test-browser": "rm -rf .browser && npm run bundle && scripts/prepare-tests && karma start",
     "test-all": "npm run test-cov && if-node-version 12 npm run test-browser",
-    "test": "npm run eslint && npm run build && npm run json-tests && npm run test-cov",
+    "test": "npm run build && npm run json-tests && npm run eslint && npm run test-cov",
     "prepublish": "npm run build",
     "watch": "watch \"npm run build\" ./lib"
   },
