--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
-before_script:
-  - git submodule update --init
-  - npm install -g codeclimate-test-reporter
 node_js:
   - 10
   - 12
   - 14
+before_script:
+  - git submodule update --init
+  - npm install -g codeclimate-test-reporter
+script:
+  - npm run test-ci
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
   - coveralls < coverage/lcov.info
