--- a/spec/.eslintrc.yml
+++ b/spec/.eslintrc.yml
@@ -1,10 +1,8 @@
-parserOptions:
-  sourceType: script
+env:
+  browser: true,
 rules:
-  no-console: 0
-  no-empty: [2, allowEmptyCatch: true]
-  quotes: 0
-  no-invalid-this: 0
+  no-console: off
+  no-invalid-this: off
 globals:
   describe: false
   it: false
@@ -13,22 +11,15 @@ globals:
   afterEach: false
 overrides:
   - files: ["*.ts"]
-    extends:
-      - "eslint:recommended"
-      - "plugin:@typescript-eslint/recommended"
-      - "plugin:@typescript-eslint/recommended-requiring-type-checking"
-      - "prettier/@typescript-eslint"
-    parser: "@typescript-eslint/parser"
     parserOptions:
       project: ["./spec/tsconfig.json"]
-    plugins: ["@typescript-eslint"]
     rules:
-      "@typescript-eslint/no-unsafe-member-access": off
+      "@typescript-eslint/explicit-function-return-type": off
+      "@typescript-eslint/explicit-member-accessibility": off
+      "@typescript-eslint/restrict-plus-operands": off
+      "@typescript-eslint/no-explicit-any": off
       "@typescript-eslint/no-unsafe-assignment": off
       "@typescript-eslint/no-unsafe-call": off
+      "@typescript-eslint/no-unsafe-member-access": off
       "@typescript-eslint/no-unsafe-return": off
-      "@typescript-eslint/restrict-plus-operands": off
       "@typescript-eslint/no-var-requires": off
-      "@typescript-eslint/no-empty-function": off
-      "@typescript-eslint/no-explicit-any": off
-      no-invalid-this: off
