fix tests failing because of strictTypes, add allowUnionTypes option

--- a/spec/.eslintrc.yml
+++ b/spec/.eslintrc.yml
@@ -23,3 +23,4 @@ overrides:
       "@typescript-eslint/no-unsafe-member-access": off
       "@typescript-eslint/no-unsafe-return": off
       "@typescript-eslint/no-var-requires": off
+      "@typescript-eslint/ban-ts-comment": off
