docs: move to DOCS folder, update FAQ (closes #874), update examples in JSON-SCHEMA.md (previously KEYWORDS.md), rename CUSTOM.md to KEYWORDS.md

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "types": "dist/ajv.d.ts",
   "files": [
     "lib/",
+    "DOCS/",
     "dist/",
     "scripts/",
-    "LICENSE",
     ".tonic_example.js"
   ],
   "scripts": {
