--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "types": ["node"],
     "allowJs": true,
     "target": "ES2018",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": false
   }
 }
