--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "fast-deep-equal": "^3.1.1",
     "json-schema-traverse": "^0.5.0",
+    "require-from-string": "^2.0.2",
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.0.27",
+    "@types/require-from-string": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "ajv-formats": "^0.5.0",
