update publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,31 +5,36 @@ on:
     types: [published]
 
 jobs:
-  publish:
+  publish-npm:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        registry: [npm, github]
-        include:
-          - registry: npm
-            registry-url: https://registry.npmjs.org/
-            token: ${{ secrets.NPM_TOKEN }}
-          - registry: github
-            registry-url: https://npm.pkg.github.com/
-            token: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-          registry-url: ${{ matrix.registry-url }}
+          registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: git submodule update --init
       - run: npm run test-ci
-      - name: Publish beta version to ${{ matrix.registry }}
+      - name: Publish beta version to npm
         if: "github.event.release.prerelease"
         run: npm publish --tag beta
         env:
-          NODE_AUTH_TOKEN: ${{ matrix.token }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-npm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
+          registry-url: https://npm.pkg.github.com/
+      - run: npm install
+      - run: git submodule update --init
+      - run: npm run test-ci
+      - name: Publish beta version to github registry
+        if: "github.event.release.prerelease"
+        run: npm publish --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
