--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "types": ["node"],
     "allowJs": true,
     "target": "ES2018",
-    "resolveJsonModule": true,
-    "esModuleInterop": false
+    "resolveJsonModule": true
   }
 }
