jtd: run tests (skipped)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spec/JSON-Schema-Test-Suite"]
 	path = spec/JSON-Schema-Test-Suite
 	url = https://github.com/json-schema/JSON-Schema-Test-Suite.git
+[submodule "spec/json-typedef-spec"]
+	path = spec/json-typedef-spec
+	url = git@github.com:jsontypedef/json-typedef-spec.git
