add benchmarks for JTD serializers to compare with JSON.stringify

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test-all": "npm run test-cov && if-node-version 12 npm run test-browser",
     "test": "npm link && npm link ajv && npm run json-tests && npm run eslint && npm run test-cov",
     "test-ci": "AJV_FULL_TEST=true npm test",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "benchmark": "npm i && npm run build && npm link && cd ./benchmark && npm link ajv && npm i && node ./serialize"
   },
   "nyc": {
     "exclude": [
