--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/require-from-string": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "@vuepress/shared-utils": "^1.8.2",
     "ajv-formats": "^1.5.0",
     "browserify": "^17.0.0",
     "chai": "^4.0.1",
