--- a/package.json
+++ b/package.json
@@ -82,11 +82,13 @@
     "browserify": "^17.0.0",
     "chai": "^4.0.1",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.1.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^7.0.0",
     "glob": "^7.0.0",
     "husky": "^5.0.9",
     "if-node-version": "^1.0.0",
+    "jimp": "^0.8.0",
     "js-beautify": "^1.7.3",
     "json-schema-test": "^2.0.0",
     "karma": "^5.0.0",
@@ -94,6 +96,7 @@
     "karma-mocha": "^2.0.0",
     "lint-staged": "^10.2.11",
     "mocha": "^8.0.1",
+    "node-fetch": "^2.6.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
     "terser": "^5.2.1",
