--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ docs/README.md
 docs/code_of_conduct.md
 docs/contributing.md
 docs/license.md
+docs/.vuepress/_contributors.js
+docs/.vuepress/contributors.jpg
